src/main/resources/static/css/style.css
@import url('https://fonts.googleapis.com/css?family=IM+Fell+English+SC');
@import url('https://fonts.googleapis.com/css?family=Josefin+Slab');
@import url('https://fonts.googleapis.com/css?family=Lato');

/* TODO: Currently, the layout breaks at small size. Write media queries that ensure this doesn't happen. */

body {
    background-color:#B4E4DF;
}

section{
    margin-bottom: 1em;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
    font-family: IM Fell English SC, serif;
    font-weight: bold;
}

.btn-primary {
    border-radius   : 0px;
    border          : 0px;
    background-color: #405D92;
    box-shadow      : 0px 5px 0px #8DA4CE;
    padding-top     : 4px;
    padding-bottom  : 4px;
    margin-top      : 6px;
    margin-bottom   : 6px;
    transition: 0.2s;
    -webkit-transition: 0.2s;
}

.btn-primary:hover {
    background-color:#617CAD;
    transition: 0.2s;
    -webkit-transition: 0.2s;
}

.center-block {
    display: table;
    margin: 0 auto;
    float: none;
}

.main-body {
    background-color:#E4F8F6;
    font-family: 'Josefin Slab', serif;
    padding-bottom: 0;
    padding-right:0;
    padding-left:0;
}

.main-column{
    padding-left: 0;
    padding-right: 0;
}

.navbar {
    background-color: #0E625C;
    border-radius:0px;
    border: 0;
    padding-bottom: 0.5em;
    padding-top: 0.5em;
    text-align: center;
}

.nav.navbar-nav li a, .nav.navbar-nav li p {
    color:#E4F8F6;
    border: 0.1em solid rgba(231, 231, 231, 0);
    border-radius: 1.7em;
    -webkit-border-radius: 2em;
    -moz-border-radius: 2em;
    margin-right: 1em;
    margin-left: 1em;
    transition: 0.2s;
    -webkit-transition: 0.2s;
}

.nav.navbar-nav li a:hover{
    color: #B4E4DF;
    background-color: rgba(231, 231, 231, 0.1);
    border: 0.1em solid rgba(231, 231, 231, 0.4);
    transition: 0.3s;
    -webkit-transition: 0.3s;
}

li.active a{
    background:
        linear-gradient(
              rgba(231, 231, 231, 0.45),
              rgba(231, 231, 231, 0.45)
            ),
        url('../img/luther_rose.png'),
        no-repeat,
        left top;
    background-size: 135%;
    color: #053028 !important;
    font-weight: bold;
}

.navbar-header .navbar-brand {
    color:#B4E4DF;
}

.navbar-header .navbar-brand:hover {
    color:#B4E4DF;
}

.nav-emphasis {
    color:#337ab7;
}

.navbar-form {
    margin:0px;
    padding-top:3px;
}

.dropdown-menu{
    background-color: rgba(231, 231, 231, 1);
}

.dropdown-item{
    background-image: none !important;
    color: #4c6184 !important;
    display: block;
    padding-top: 1em;
    padding-bottom: 1em;
}

.post-cell-right {
    background-color:#DC8D52;
    box-shadow:0px 10px 0px #FFB782;
}

.post-cell-right-bottom {
    padding-top:0px;
    padding-bottom:0px;
    color:#FFECCA;
    background-color:#FFB782;
}

.post {
    padding-left: 1em;
    padding-right: 1em;
}

.post h2 {
    color:#405D92;
}

.post p, .post span {
    color:#405D92;
}
.post-body {
    font-size: 1.2em;
    margin-top: 1.3em;
    margin-bottom: 1.3em;
}

.post-cell-right p, .post-signature p {
    color:#FFD382;
}

.post-signature {
    background-color:#DC8D52;
    box-shadow:0px 10px 0px #FFB782;
    margin-bottom: 15px;
    padding: 1.1em;
    width:50%;
}

.pager li a {
    border-radius:0px;
    border:0px;
    background-color:#338980;
    color:#E4F8F6;
    box-shadow:0px 5px 0px #82C7C0;
}

.pager li a:hover {
    background-color:#53A39A;
    color:#338980;
}

.inline {
    display:inline;
}

.header-wrapper{
    background-color: #70a6ff;
    background-image: url('../img/love.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.site-branding {
    color: #dee9fc;
    padding-top: 6.5em;
    padding-bottom: 6.6em;
    padding-left: 1.5em;
    padding-right: 1.5em;
    text-align: center;
}

.nav-boxes{
    height: 25em;
    text-align: center;
    padding-top: 3em;
    padding-bottom: 3em;
}
.nav-boxes img{
    width: 100%;
}
.nav-boxes div{
    height: 100%;
}
.nav-boxes .col h3{
    height: 25%;
    vertical-align: middle;
}

.nav-box-active{
    background-color: #2e9b87;
    background-image: url('../img/checkered_pattern.png');
    color: #E4F8F6;
}
.nav-box-active li a{
    color: #fff;
}

.block-list{
    list-style-type: none;
    padding-left: 0;
    padding-right: 0;
    width: 100%;
}
.block-list li{
    width: 100%;
}
.block-list li a{
    display: block;
    padding-top: 1em;
    padding-bottom: 1em;
    transition: 0.2s;
    -webkit-transition: 0.2s;
    width: 100%;
}
.block-list li a:hover{
    background-color: #E4F8F6;
    color: #2e9b87;
    transition: 0.2s;
    -webkit-transition: 0.2s;
}

.carousel-wrapper{
    height: 25em;
    margin-top: 5em;
}
.carousel-wrapper div{
    display: inline-block;
}
.carousel-wrapper img{
    height: 100%;
    padding: 0;
    width: 100%;
}
#worship-times{
    background-color: #2fce7e;
    float: right;
    font-size: 1.5em;
    height: 100%;
    padding-right: 5em;
    padding-left: 5em;
    padding-top: 1em;
    padding-bottom: 1em;
}

.contact-info{
	margin-top: 4em;
	height: 20em;
}
.contact-info div{
	display: inline-block;
	padding-top: 1.5em;
	padding-bottom: 1.5em;
	padding-left: 5em;
	padding-right: 5em;
}
.contact-info .fas{
	font-size: 1.5em;
}
#facebook-icon{
	color: #fff;
	font-size: 10em;
	transition: 0.2s;
    -webkit-transition: 0.2s;
}
#facebook-icon:hover{
	color: rgba(255, 255, 255, 0.4);
	transition: 0.2s;
	-webkit-transition: 0.2s;
}

#contact-box{
	color: #fff;
	background-color: #2e9b87;
	background-image: url('../img/checkered_pattern.png');
	height: 100%;
}
#contact-box a{
    color: #56ffdf;
}
#facebook-info{
	background-color: #2d509b;
	background-image: url('../img/checkered_pattern_@2X.png');
	color: #fff;
	float: right;
	height: 100%;
}

.page-sidebar, .page-body{
    display: inline-block;
}

.page-sidebar{
    background-color: #d7e2e1;
    float: left;
}
.page-sidebar img{
    display: block;
    padding: 1em;
}

.page-body{
    padding-left: 1.5em;
    padding-right: 1.5em;
    width: 70%;
}

.page-item{
    margin-bottom: 1.4em;
}
.page-item div{
    display: inline-block;
    padding: 2em;
    width: 50%;
}
.page-item h3{
    padding-left: 1.3em;
    padding-right: 1.3em;
}
.page-item img{
    width: 100%;
}

.table-two-col tr td{
    padding: 1em;
}

.footer{
	background-color: #1c1a18;
	color: #fff;
	margin-top: 4em;
	padding: 2em;
	text-align: right;
}

.inline-box{
    background-color: #4f787f;
    color: #fff;
    display: inline-block;
    height: 26em;
    margin-right: 1em;
    padding: 1em;
    text-align: center;
    vertical-align: top;
}
.inline-box h4{
    color: #E4F8F6;
}
.inline-box i {
    font-size: 5em;
    padding: 0.2em;
}

.extra-space{
    height: 55em;
}

.no-border{
    border: 0;
}

.right{
    float: right;
}

.width-10{
    width: 10%;
}
.width-20{
    width: 20%;
}
.width-30{
    width: 30%;
}
.width-40{
    width: 40%;
}
.width-50{
    width: 50%;
}
.width-60{
    width: 60%;
}
.width-70{
    width: 70%;
}
.width-80{
    width: 80%;
}
.width-90{
    width: 90%;
}
.width-100{
    width: 100%;
}


@media screen and (max-width: 1090px){
    .page-sidebar, .page-body{
        display: block;
        float: none;
    }
    .page-body{
        height: auto;
        width: 100%;
    }
    .page-sidebar{
        text-align: center;
    }
    .page-sidebar img{
        display: inline;
        margin-left: 2em;
        margin-right: 2em;
    }
}

@media screen and (max-width: 991px){
    .page-sidebar img{
        margin-left: 0;
        margin-right: 0;
        width: 30%;
    }
    .page-item div{
        height: 40em;
    }
}

@media screen and (max-width: 766px){
    .inline-box{
        text-align: center;
        height: auto;
        margin: 0;
        width: 100%;
    }
    .site-branding img{
        width: 100%;
    }
    .page-body img{
        width: 100%;
    }
    .page-item div{
        display: block;
        float: none;
        height: auto;
        width: 100%;
    }
}

